Fix account badges alignment for different device view

--- a/app/assets/stylesheets/accounts/show.sass
+++ b/app/assets/stylesheets/accounts/show.sass
@@ -47,8 +47,7 @@
       .btn-info
        font-size: 10px !important
   #account_name_header
-    margin-top: -134px
-    margin-left: 64px
+    margin-top: 10px
     h1
       font-size: 14px !important
       width: auto
