--- a/app/assets/stylesheets/badges.sass
+++ b/app/assets/stylesheets/badges.sass
@@ -87,7 +87,7 @@
     &.last
       :margin-right 0
 
-#account_header
+.account_header
   .mini-badges-section
     position: relative
     margin: 27px 4px 0 0
@@ -98,9 +98,10 @@
       &.last
         margin-right: 0
 @media only all and (min-width: 320px) and (max-width: 480px)
-  #account_header
+  .account_header
     .mini-badges-section
-      margin: 5px 43px 0 0
+      margin: 0 0 15px
+      display: flex
       .account-badge
         margin: 0 20px 20px 0
 
